tempfile/derive_more/tests/compile_fail/as_ref/multiple_struct_attrs.rs
#[derive(derive_more::AsRef)]
#[as_ref(forward)]
#[as_ref(forward)]
struct Foo {
    bar: i32,
}

fn main() {}
